--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_API=1039146249:AAHyYkFOh-j7xXAcQKRoheX-fkLYF9Gkilc
-URL=https://deneyselbot.herokuapp.com/
+BOT_API=1503670614:AAEHNGphxxj_6Vog89OJV_xUJHeg6Sqzc9w
+URL=https://dernektelegrambot.herokuapp.com/
 PORT=8443
