--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_API=1503670614:AAEHNGphxxj_6Vog89OJV_xUJHeg6Sqzc9w
-URL=https://dernektelegrambot.herokuapp.com/
+BOT_API=1557515093:AAEeE5JIIHELWuXbUKZsoZ6ocV-r6PG2hZY
+URL=https://kovacikdersistembot.herokuapp.com/
 PORT=8443
